--- a/teht4/package.json
+++ b/teht4/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "watch": "node_modules/.bin/nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "lint": "node_modules/.bin/eslint ."
   },
   "repository": {
@@ -31,6 +31,7 @@
     "morgan": "^1.9.0"
   },
   "devDependencies": {
+    "jest": "^22.3.0",
     "nodemon": "^1.14.12"
   }
 }
