--- a/teht4/package.json
+++ b/teht4/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^5.0.0",
     "eslint": "^4.17.0",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.4",
     "morgan": "^1.9.0"
   },
